--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
-<head> Faceversary Swag Program </head>
+<head> 
+<!--<meta http-equiv="refresh" content="0; url=http://youtube.com/" />-->
+<title>Faceversary Swag Program </title>
+<meta name="description" content="Free Web tutorials">
+  <meta name="keywords" content="HTML,CSS,JavaScript">
+  <meta name="author" content="John Doe">
+
+</head>
 <body>
 	LOL
 </body>
